# Lazy

./: .gitignore  CMakeLists.txt  Dockerfile  INSTALL.md  LICENSE  Makefile  QUICKSTART.md  QUICK_REFERENCE.md  README.md  REFERENCIA_RAPIDA.md  SIMPLE_USAGE.md  TODO.md  USO_SIMPLE.md  a.out  debug_similarity.py  docker-compose.yml  install.sh  lazy  uninstall.sh
docs/: ai_features.md  docker_guide.md  language_reference.md  language_spec.md  namespace_implementation.md  project_structure.md
editor/vscode/: README.md  install.sh  language-configuration.json  lazya-0.1.0.vsix  package-lock.json  package.json
editor/vscode/syntaxes/: lazya.tmLanguage.json
examples/: 21_markdown_edit.lazy  ex01_primes.lazy  ex02_inventory.lazy  ex03_factorial.lazy  ex04_ai_assistant.lazy  ex05_io.lazy  ex06_files.lazy  ex07_ai_agents.lazy  ex08_semantic_match.lazy
runtime_lib/: lazya_runtime.c
scripts/: build.sh  clean.sh  docker-build.sh  docker-run.sh  install_ai.sh  install_ollama.sh  setup.sh  setup_env.sh  uninstall.sh  update.sh
src/: main.cpp
src/ast/: ast.cpp  ast.h
src/codegen/: AIFunctionGenerator.cpp  AIFunctionGenerator.h  llvm_codegen.cpp  llvm_codegen.cpp_snippet  llvm_codegen.h
src/lexer/: lexer.l
src/parser/: parser.y
src/runtime/: FileIO.h  GenericIO.h  IRuntimeFunction.h  PrintFunction.cpp  PrintFunction.h  ReadFunction.h  RuntimeRegistry.cpp  RuntimeRegistry.h  RuntimeShim.cpp  SemanticOps.h  SimpleIO.h  StdLib.cpp  StdLib.h  StringOps.cpp  StringOps.h  cache_manager.cpp  cache_manager.h
src/runtime/ai/: AISemanticOps.cpp  AISemanticOps.h  AISemanticRuntime.cpp  AISemanticRuntime.h  OllamaClient.cpp  OllamaClient.h  OllamaRuntime.cpp  OllamaRuntime.h  nlp_helper.py
src/runtime/http/: HTTPClient.cpp  HTTPClient.h
src/types/: type_system.cpp  type_system.h
